--- a/NO1shop/css/firstpage.css
+++ b/NO1shop/css/firstpage.css
@@ -13,7 +13,7 @@
 	padding-left:210px;
 	width:990px;
 }
-.content_mainbg .nav_border{	
+.content_mainbg .nav_border{
 	height:34px;
 	border-bottom:2px solid #fd3f49;
 	background-color:#fff;
@@ -72,7 +72,7 @@
 }
 .type_ico1 i{
 	width:13px;
-	height:17px;	
+	height:17px;
 	background:url(../img/ico.png) -160px 0 no-repeat;
 }
 .type_item a{
@@ -86,7 +86,7 @@
 }
 .type_ico2 i{
 	width:15px;
-	height:17px;	
+	height:17px;
 	background:url(../img/ico2.png) -18px -32px no-repeat;
 }
 .type_item .type_ico3{
@@ -96,52 +96,52 @@
 }
 .type_ico3 i{
 	width:17px;
-	height:17px;	
+	height:17px;
 	background:url(../img/ico2.png) -36px -32px no-repeat;
 }
 .type_ico4 i{
 	width:16px;
-	height:18px;	
+	height:18px;
 	background:url(../img/ico2.png) -56px -32px no-repeat;
 }
 .type_ico5 i{
 	width:17px;
-	height:15px;	
+	height:15px;
 	background:url(../img/ico2.png) -76px -32px no-repeat;
 }
 .type_ico6 i{
 	width:12px;
-	height:17px;	
+	height:17px;
 	background:url(../img/ico2.png) -96px -32px no-repeat;
 }
 .type_ico7 i{
 	width:16px;
-	height:17px;	
+	height:17px;
 	background:url(../img/ico2.png) -110px -32px no-repeat;
 }
 .type_ico8 i{
 	width:17px;
-	height:17px;	
+	height:17px;
 	background:url(../img/ico2.png) -128px -32px no-repeat;
 }
 .type_ico9 i{
 	width:16px;
-	height:17px;	
+	height:17px;
 	background:url(../img/ico2.png) -146px -32px no-repeat;
 }
 .type_ico10 i{
 	width:18px;
-	height:13px;	
+	height:13px;
 	background:url(../img/ico2.png) -162px -32px no-repeat;
 }
 .type_ico11 i{
 	width:17px;
-	height:17px;	
+	height:17px;
 	background:url(../img/ico2.png) -182px -32px no-repeat;
 }
 .type_ico12 i{
 	width:16px;
-	height:11px;	
+	height:11px;
 	background:url(../img/ico2.png) 0 -50px no-repeat;
 }
 .content_nav .other_nav{
@@ -180,13 +180,24 @@
 .main_center .main_banner{
 	width: 750px;
 	height:367px;
-	background:url(../img/content-banner.jpg) center top no-repeat;	
 }
 .main_center .main_middle{
 	width:750px;
-	height:398px;
+	height:400px;
 	position:relative;
+	overflow:hidden;
 }
+.main_middle .banner_pic{
+	position:absolute;
+	width:200%;
+}
+.banner_pic img{
+	width:750px;
+	height:400px;
+	float:left;
+	/*transform:all 500ms linear;*/
+}
+
 .main_center .banner_fa{
 	width:100%;
 	height:15px;
@@ -194,6 +205,25 @@
 	left:0;
 	bottom:16px;
 	text-align:center;
+}
+.main_middle .prev,.main_middle .next{
+	border:none;
+	width:50px;
+	height:50px;
+	position:absolute;
+	top:50%;
+	cursor:pointer;
+}
+.main_middle .prev:hover,.main_middle .next:hover{
+	transform: scale(1.5);
+}
+.main_middle .prev{
+	background:url(../img/prev.png) 13px 3px no-repeat;
+	left:0;
+}
+.main_middle .next{
+	background:url(../img/next.png) 13px 3px no-repeat;
+	right:0;
 }
 .main_center .changer_banner{
 	display:inline-block;
@@ -205,6 +235,9 @@
 	height:15px;
 	background-color:#ccc;
 	margin-right:13px;
+}
+.changer_banner .active{
+	background-color:#ff3c3c;
 }
 .changer_banner .change_list:hover{
 	background-color:#ff3c3c;
@@ -226,7 +259,7 @@
 }
 .main_news .news_list{
 	height:26px;
-	line-height:26px;	
+	line-height:26px;
 }
 .special_service{
 	background-color:#fff;
@@ -334,7 +367,7 @@
 	position:absolute;
 	top:65px;
 	left:32px;
-	background:url(../img/ico.png) -32px -57px no-repeat;	
+	background:url(../img/ico.png) -32px -57px no-repeat;
 }
 .active_content .btn_next i{
 	width:16px;
@@ -342,12 +375,12 @@
 	position:absolute;
 	top:65px;
 	left:45px;
-	background:url(../img/ico.png) -52px -57px no-repeat;	
+	background:url(../img/ico.png) -52px -57px no-repeat;
 }
 .active_list .active_item{
 	width:164px;
 	height:238px;
-	margin-right:46px;	
+	margin-right:46px;
 	font-size:14px;
 	line-height:26px;
 	overflow:hidden;
@@ -457,9 +490,9 @@
 	background-color:#ff3334;
 	border-radius:9px;
 	margin-bottom:16px;
-} 
+}
 .produt_tag a{
-	color:#fff;	
+	color:#fff;
 }
 
 
@@ -496,7 +529,7 @@
 	text-align:center;
 	line-height:23px;
 	color:#fff;
-	margin-bottom:10px;	
+	margin-bottom:10px;
 	*display:inline;
 	*zoom:1;
 }
@@ -511,11 +544,11 @@
 	width:241px;
 	height:400px;
 	text-align:center;
-	background-color:#fff;	
+	background-color:#fff;
 }
 .other_kind .kind_item{
 	padding-top:13px;
-	border-bottom:1px solid #F2F2F2;	
+	border-bottom:1px solid #F2F2F2;
 	padding-bottom:11px;
 }
 .kind_item .kind_name{
@@ -538,7 +571,7 @@
 	height:18px;
 	background-color:#fc3434;
 	color:#fff;
-	border-radius:9px;	
+	border-radius:9px;
 	margin-bottom:2px;
 	line-height:19px;
 }
@@ -548,9 +581,9 @@
 	height:60px;
 	margin:0 auto 23px;
 }
-.content .commodity{	
+.content .commodity{
 	background-color:#fff;
-	margin-bottom:23px;	
+	margin-bottom:23px;
 }
 .commodity .commodity_head{
 	height:26px;
@@ -633,7 +666,7 @@
 	text-align:center;
 	position:absolute;
 	left:114px;
-	bottom:24px;	
+	bottom:24px;
 }
 .commodity_btnwrap .commodity_btn{
 	display:inline;
@@ -662,7 +695,7 @@
 	height:164px;
 	border-bottom:none;
 }
-.list3_item .list3_tag{	
+.list3_item .list3_tag{
 	margin-bottom:10px;
 }
 .commodity_list4 .list4_item{
@@ -672,7 +705,7 @@
 	border-left:1px solid #f4f4f4;
 	border-right:1px solid #f4f4f4;
 	padding-top:14px;
-	line-height:24px;	
+	line-height:24px;
 }
 .list4_item .list4_tag{
 	margin-bottom:58px;
@@ -686,15 +719,15 @@
 	line-height:24px;
 	overflow:hidden;
 }
-.list5_item .list5_tag{	
+.list5_item .list5_tag{
 	margin-bottom:13px;
 }
 
 .content .personal_clear{
 	width:1200px;
-	height:571px;	
+	height:571px;
 	background-color:#fff;
-	margin-bottom:23px;	
+	margin-bottom:23px;
 }
 .personal_clear .clear_head{
 	height:26px;
@@ -783,7 +816,7 @@
 	text-align:center;
 	position:absolute;
 	left:114px;
-	top:332px;	
+	top:332px;
 }
 .clear_btnwrap .clear_btn{
 	display:inline;
@@ -824,13 +857,13 @@
 	padding-top:14px;
 	line-height:24px;
 }
-.clear_item1 .list3_tag{	
+.clear_item1 .list3_tag{
 	margin-bottom:10px;
 }
-.clear_item2 .list3_tag{	
+.clear_item2 .list3_tag{
 	margin-bottom:15px;
 }
-.clear_item3 .list3_tag{	
+.clear_item3 .list3_tag{
 	margin-bottom:18px;
 }
 .clear_list4 .list4_item,.clear_list4 .list4_item2{
@@ -839,7 +872,7 @@
 	border-right:1px solid #f4f4f4;
 	border-bottom:1px solid #f4f4f4;
 	padding-top:14px;
-	line-height:24px;	
+	line-height:24px;
 }
 .list4_item .list4_tag{
 	margin-bottom:25px;
@@ -858,18 +891,18 @@
 	padding-top:14px;
 	line-height:24px;
 }
-.clear_list5 .list5_item .list5_tag{	
+.clear_list5 .list5_item .list5_tag{
 	margin-bottom:15px;
 }
-.clear_list5 .list5_item2 .list5_tag{	
+.clear_list5 .list5_item2 .list5_tag{
 	margin-bottom:15px;
 }
 
 .content .popul_commodity {
 	width:1200px;
-	height:571px;	
+	height:571px;
 	background-color:#fff;
-	margin-bottom:23px;	
+	margin-bottom:23px;
 }
 .popul_commodity .popul_head{
 	height:26px;
@@ -976,7 +1009,7 @@
 	text-align:center;
 	position:absolute;
 	left:114px;
-	top:332px;	
+	top:332px;
 }
 .popul_btnwrap .popul_btn{
 	display:inline;
@@ -1026,7 +1059,7 @@
 	border-right:1px solid #f4f4f4;
 	border-bottom:1px solid #f4f4f4;
 	padding-top:14px;
-	line-height:24px;	
+	line-height:24px;
 }
 .popul_list4 .list4_item .list4_pic1{
 	display:block;
@@ -1067,13 +1100,13 @@
 	padding-top:14px;
 	line-height:24px;
 }
-.popul_item1 .list3_tag{	
+.popul_item1 .list3_tag{
 	margin-bottom:10px;
 }
-.popul_item2 .list3_tag{	
+.popul_item2 .list3_tag{
 	margin-bottom:15px;
 }
-.popul_item3 .list3_tag{	
+.popul_item3 .list3_tag{
 	margin-bottom:18px;
 }
 .popul_list4 .list4_item,.popul_list4 .list4_item2{
@@ -1082,7 +1115,7 @@
 	border-right:1px solid #f4f4f4;
 	border-bottom:1px solid #f4f4f4;
 	padding-top:14px;
-	line-height:24px;	
+	line-height:24px;
 }
 .list4_item .list4_tag{
 	margin-bottom:25px;
@@ -1101,18 +1134,18 @@
 	padding-top:14px;
 	line-height:24px;
 }
-.popul_list5 .list5_item .list5_tag{	
+.popul_list5 .list5_item .list5_tag{
 	margin-bottom:15px;
 }
-.popul_list5 .list5_item2 .list5_tag{	
+.popul_list5 .list5_item2 .list5_tag{
 	margin-bottom:15px;
 }
 
 .content .electronics{
 	width:1200px;
-	height:571px;	
+	height:571px;
 	background-color:#fff;
-	margin-bottom:23px;	
+	margin-bottom:23px;
 }
 .electronics .elctro_head{
 	height:26px;
@@ -1209,7 +1242,7 @@
 	text-align:center;
 	position:absolute;
 	left:114px;
-	top:332px;	
+	top:332px;
 }
 .elctro_btnwrap .elctro_btn{
 	display:inline;
@@ -1247,7 +1280,7 @@
 	border-right:1px solid #f4f4f4;
 	border-bottom:1px solid #f4f4f4;
 	padding-top:14px;
-	line-height:24px;	
+	line-height:24px;
 }
 .elctro_list4 .list4_item2 .price_tag{
 	margin-top:10px;
@@ -1286,7 +1319,7 @@
 	width:219px;
 	border-right:1px solid #f4f4f4;
 	border-bottom:1px solid #f4f4f4;
-	text-align:center;	
+	text-align:center;
 	padding-bottom:8px;
 }
 .elctro_disp .disp_item1{
@@ -1300,7 +1333,7 @@
 	width:219px;
 	border-right:1px solid #f4f4f4;
 	border-bottom:1px solid #f4f4f4;
-	text-align:center;	
+	text-align:center;
 	padding-bottom:8px;
 }
 .elctro_disp .disp_item2{
@@ -1365,9 +1398,9 @@
 .disp_item6 .price_mb{
 	margin-top:13px;
 }
-.content .groupbuy{	
+.content .groupbuy{
 	background-color:#fff;
-	margin-bottom:23px;	
+	margin-bottom:23px;
 }
 .groupbuy .groupbuy_head{
 	height:26px;
@@ -1525,7 +1558,7 @@
 	position:absolute;
 	left:28px;
 	top:17px;
-} 
+}
 .fasth_left .fast_send:hover .triangle{
 	display:block;
 }
